--- a/HomeLedApp/UI/MainPage.xaml
+++ b/HomeLedApp/UI/MainPage.xaml
@@ -105,16 +105,12 @@
                     <Slider Style="{StaticResource SliderStyle}" Grid.Row="1" Minimum="0" Maximum="50" Value="{x:Binding Model.Speed, Mode=TwoWay}"/>
                     <Slider Style="{StaticResource SliderStyle}" Grid.Row="2" Minimum="0" Maximum="150" Value="{x:Binding Model.Number, Mode=TwoWay}"/>
                 </Grid>
+                <Button Text="Refresh" Clicked="Refresh"/>
                 <ListView ItemsSource="{x:Binding SSDPInstance.DiscoveredDevices}"
-                          SelectedItem="{x:Binding Model.CurrentDevice}">
-                    <ListView.HeaderTemplate>
-                        <DataTemplate>
-                            <Button Text="Refresh" Clicked="Refresh"/>
-                        </DataTemplate>
-                    </ListView.HeaderTemplate>
+                          SelectedItem="{x:Binding Model.CurrentDevice}" HeightRequest="200">
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="model:LEDDevice">
-                            <ViewCell IsEnabled="{x:Binding IsUpToDate}" Appearing="ViewCell_Appearing">
+                            <ViewCell IsEnabled="{x:Binding IsUpToDate}">
                                 <Label Text="{x:Binding HostName}" HorizontalOptions="Center"/>
                             </ViewCell>
                         </DataTemplate>
