--- a/HomeLedApp/UI/MainPage.xaml
+++ b/HomeLedApp/UI/MainPage.xaml
@@ -111,7 +111,14 @@
                     <ListView.ItemTemplate>
                         <DataTemplate x:DataType="model:LEDDevice">
                             <ViewCell IsEnabled="{x:Binding IsUpToDate}">
-                                <Label Text="{x:Binding HostName}" HorizontalOptions="Center"/>
+                                <Grid>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="50"/>
+                                    </Grid.ColumnDefinitions>
+                                    <Label Grid.Column="0" Text="{x:Binding HostName}" HorizontalOptions="Center"/>
+                                    <Button Grid.Column="1" Text="..." Clicked="RenameHost"/>
+                                </Grid>
                             </ViewCell>
                         </DataTemplate>
                     </ListView.ItemTemplate>
